# ray-tracer

./: .gitignore  .lldbinit  Analysis.ipynb  Cargo.toml  LICENSE  README.md  plot.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  pr.yaml
analysis/: Analysis.ipynb  Cargo.toml
analysis/results/: flattened_intersections_small.json  splitting_heuristics_equal_spheres_beta_x.json  splitting_heuristics_equal_spheres_normal_yz_time.json  splitting_heuristics_equal_spheres_uniform_yz.json  splitting_heuristics_uniform_spheres_uniform_position.json
analysis/src/: generator.rs
experiments/: Analysis.ipynb  Cargo.toml  compare_splitting_heuristics.json
experiments/results/: compare_instancing.json  compare_splitting_heuristics.json  compare_splitting_heuristics2.json  flattened_intersections.json  flattened_memory.json  instanced_intersections.json  instanced_intersections_small.json  instanced_memory.json  instancing_memory.json  splitting_heuristics_equal_spheres_beta_corners.json  splitting_heuristics_equal_spheres_beta_corners2.json  splitting_heuristics_equal_spheres_beta_corners_time.json  splitting_heuristics_equal_spheres_normal_yz.json  splitting_heuristics_equal_spheres_uniform_position.json  splitting_heuristics_equal_spheres_uniform_time.json  splitting_heuristics_equal_spheres_uniform_yz_time.json  splitting_heuristics_uniform_spheres_uniform_position_time.json
experiments/src/: generator.rs  lib.rs  scene_generators.rs
report/: main.tex
src/: brdf.rs  bvh.rs  camera.rs  lib.rs  light.rs  main.rs  material.rs  renderer.rs  sampler.rs  shade_rec.rs  texture.rs  tracer.rs  world.rs
src/accel/: bvh.rs
src/bvh/: mod.rs  space_median_split.rs
src/camera/: mod.rs  perspective.rs
src/const_iter/: mod.rs
src/core/: aabb.rs  interaction.rs  light.rs  mod.rs  normal.rs  primitive.rs  ray.rs  shape.rs  transformation.rs
src/film/: frame_buffer.rs  mod.rs  pixel.rs  rgb.rs
src/math/: matrix.rs  mod.rs  orthonormal_basis.rs  point.rs  ray.rs  transformation.rs  vector.rs
src/shape/: aabb.rs  compound.rs  (+11 more)
(+16 files in other folders)
