[package]
name = "cg-practicum"
version = "0.1.0"
edition = "2018"
authors = ["Bo Kleynen <kleynenbo@gmail.com>"]
repository = "https://github.com/BoKleynen/cg-practicum"
keywords = ["ray-tracing"]
readme = "README.md"
description = """
Computer Graphics: Project (academic year 2020-2021)
"""

[dependencies]
clap = { version = "3.0", features = ["derive"] }
nalgebra = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true

[features]
