[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2018"
authors = ["Bo Kleynen <kleynenbo@gmail.com>"]
repository = "https://github.com/BoKleynen/cg-practicum"
keywords = ["ray-tracing"]
readme = "README.md"
description = """
Computer Graphics: Project (academic year 2020-2021)
"""

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
image = "0.23"
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.10"
nalgebra = "0.30"
rand = "0.8"
rayon = "1.5"

[profile.release]
lto = true

[features]
default = ["bvh"]

bvh = []
