[package]
name = "experiments"
version = "0.1.0"
authors = ["Bo Kleynen <kleynenbo@gmail.com>"]
edition = "2018"
description = """
This crate contains some experiments designed to analyse the performance of the ray tracer.
"""

[dependencies]
cg-practicum = { path = ".." }
indicatif = { version = "0.16", features = ["rayon"] }
itertools = "0.10"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
